syntax = "proto2";
package azurlane.p17_pb;
option go_package = "github/flyqie/blhx_server/pkg/model/blhx_game_proto/p17_pb";

message sc_17001 {
  repeated uint32 finish_list = 1;
  repeated achievement_info progress_list = 2;
  repeated ship_statistics_info ship_info_list = 3;
  repeated ship_statistics_award ship_award_list = 4;
  required uint32 daily_discuss = 5;
}

message sc_17002 {
  repeated achievement_info progress_list = 1;
}

message sc_17003 {
  repeated uint32 id_list = 1;
}

message sc_17004 {
  required ship_statistics_info ship_info = 1;
}

message cs_17005 {
  required uint32 id = 1;
  required uint32 award_index = 2;
}

message sc_17006 {
  required uint32 result = 1;
}

message cs_17101 {
  required uint32 ship_group_id = 1;
}

message sc_17102 {
  required ship_discuss_info ship_discuss = 1;
}

message cs_17103 {
  required uint32 ship_group_id = 1;
  required string context = 2;
}

message sc_17104 {
  required uint32 result = 1;
  optional ship_discuss_info ship_discuss = 2;
}

message cs_17105 {
  required uint32 ship_group_id = 1;
  required uint32 discuss_id = 2;
}

message sc_17106 {
  required uint32 result = 1;
}

message cs_17107 {
  required uint32 ship_group_id = 1;
}

message sc_17108 {
  required uint32 result = 1;
}

message achievement_info {
  required uint32 id = 1;
  required uint32 progress = 2;
}

message ship_statistics_info {
  required uint32 id = 1;
  required uint32 star = 2;
  required uint32 heart_flag = 3;
  required uint32 heart_count = 4;
}

message ship_statistics_award {
  required uint32 id = 1;
  repeated uint32 award_index = 2;
}

message ship_discuss_info {
  required uint32 ship_group_id = 1;
  required uint32 discuss_count = 2;
  required uint32 heart_count = 3;
  repeated discuss_info discuss_list = 4;
  required uint32 daily_discuss_count = 5;
}

message discuss_info {
  required uint32 id = 1;
  required uint32 good_count = 2;
  required string nick_name = 3;
  required string context = 4;
}
